--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2"
   },
